--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,6 @@ edition = "2021"
 
 [dependencies]
 crossterm = "0.28.1"
-rodio = "0.19.0"
+rodio = "0.20.1"
+once_cell = "1.20.2"
+chrono = "0.4.38"
