--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-crossterm = "0.28.1"
+crossterm = "0.29.0"
+ctrlc = "3.4.7"
+ratatui = "0.29.0"
 rodio = "0.20.1"
-once_cell = "1.20.2"
-chrono = "0.4.38"
-ctrlc = "3.4.5"
