--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,4 +1,3 @@
-
 permissions:
   actions: write
   attestations: write
@@ -13,7 +12,7 @@ permissions:
   repository-projects: write
   security-events: write
   statuses: write
-  
+
 name: Release
 
 on:
@@ -25,51 +24,99 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
         include:
+          # Linux
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
-            asset_name: portal-still-alive-linux
+            asset_name: portal-still-alive-linux-x86_64
+          - os: ubuntu-latest
+            target: i686-unknown-linux-gnu
+            asset_name: portal-still-alive-linux-x86
+          - os: ubuntu-latest
+            target: aarch64-unknown-linux-gnu
+            asset_name: portal-still-alive-linux-arm64
+          - os: ubuntu-latest
+            target: armv7-unknown-linux-gnueabihf
+            asset_name: portal-still-alive-linux-armv7
+          - os: ubuntu-latest
+            target: riscv64gc-unknown-linux-gnu
+            asset_name: portal-still-alive-linux-riscv64
+          - os: ubuntu-latest
+            target: loongarch64-unknown-linux-gnu
+            asset_name: portal-still-alive-linux-loongarch64
+
+          # Windows
           - os: windows-latest
             target: x86_64-pc-windows-msvc
-            asset_name: portal-still-alive-windows.exe
+            asset_name: portal-still-alive-windows-x86_64.exe
+          - os: windows-latest
+            target: i686-pc-windows-msvc
+            asset_name: portal-still-alive-windows-x86.exe
+          - os: windows-latest
+            target: aarch64-pc-windows-msvc
+            asset_name: portal-still-alive-windows-arm64.exe
+
+          # macOS (Apple Silicon + Intel)
           - os: macos-latest
             target: x86_64-apple-darwin
-            asset_name: portal-still-alive-macos
+            asset_name: portal-still-alive-macos-x86_64
+          - os: macos-latest
+            target: aarch64-apple-darwin
+            asset_name: portal-still-alive-macos-arm64
+
+          # FreeBSD (cross-compile)
+          - os: ubuntu-latest
+            target: x86_64-unknown-freebsd
+            asset_name: portal-still-alive-freebsd-x86_64
+          - os: ubuntu-latest
+            target: aarch64-unknown-freebsd
+            asset_name: portal-still-alive-freebsd-arm64
+
+          # Generic Unix (fallback)
+          - os: ubuntu-latest
+            target: x86_64-unknown-linux-musl
+            asset_name: portal-still-alive-unix-x86_64
+          - os: ubuntu-latest
+            target: aarch64-unknown-linux-musl
+            asset_name: portal-still-alive-unix-arm64
 
     runs-on: ${{ matrix.os }}
-    
+
     steps:
     - uses: actions/checkout@v4
-    
+
     - name: Install Linux dependencies
-      if: matrix.os == 'ubuntu-latest'
+      if: runner.os == 'Linux'
       run: |
         sudo apt-get update
-        sudo apt-get install -y libasound2-dev pkg-config
-        
+        sudo apt-get install -y libasound2-dev pkg-config gcc-multilib g++-multilib qemu-user-static
+
     - name: Install macOS dependencies
-      if: matrix.os == 'macos-latest'
+      if: runner.os == 'macOS'
       run: |
         brew install pkg-config
-        
-    - name: Install Rust toolchain
+
+    - name: Add Rust target
       uses: dtolnay/rust-toolchain@stable
       with:
         targets: ${{ matrix.target }}
-        
+
     - name: Build
-      run: cargo build --release --verbose
-      
+      env:
+        CARGO_BUILD_TARGET: ${{ matrix.target }}
+      run: |
+        cargo build --release --target ${{ matrix.target }} --verbose
+
     - name: Prepare binary
       shell: bash
       run: |
-        if [ "${{ matrix.os }}" = "windows-latest" ]; then
-          cp target/release/*.exe ${{ matrix.asset_name }}
-        else
-          cp target/release/Portal_StillAlive_Rust ${{ matrix.asset_name }}
-        fi
-      
+        BIN_NAME="Portal_StillAlive_Rust"
+        case "${{ matrix.target }}" in
+          *windows*) BIN_NAME="${BIN_NAME}.exe" ;;
+        esac
+
+        cp "target/${{ matrix.target }}/release/${BIN_NAME}" "${{ matrix.asset_name }}"
+
     - name: Upload Release Asset
       uses: softprops/action-gh-release@v1
       with:
