--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,15 @@
 [package]
 name = "Portal_StillAlive_Rust"
-version = "0.1.0"
+version = "0.9.8"
 edition = "2021"
 
+[features]
+audio = []
+[target.'cfg(target_os = "linux")'.dependencies]
+cpal = { version = "0.16.0", default-features = false }
+
+[target.'cfg(not(target_os = "linux"))'.dependencies]
+cpal = { version = "0.16.0", default-features = false }
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
